--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -27,7 +27,7 @@ spring:
         url: jdbc:mysql://localhost:3306/viaikea?useUnicode=true&characterEncoding=utf8&useSSL=false
         name:
         username: root
-        password:
+        password: password
         hikari:
             data-source-properties:
                 cachePrepStmts: true
